added Aviv's proj text + fixed broken links in blog section

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -306,10 +306,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                TamamApp
+                                Tamam 28
                             </h3>
                             <p class="item-folio__cat">
-                                It's an app that Aviv needs to what it does because i forgot what he said
+                                Internal Support Utility – Tamam 28 Application
                             </p>
                         </div>
 
@@ -319,7 +319,7 @@
 
                         <div class="item-folio__caption">
                             <p>
-                                Here Aviv need to describe the app
+                                A small help application that centralized multiple recurring IT issues into one place. Each button triggered an automated fix, replacing scattered guides and making troubleshooting faster, simpler, and more consistent for them
                             </p>
                             <a href="https://github.com/omershachar">View Repository</a>
                         </div>
@@ -494,7 +494,7 @@
                     <!-- book-->
                     <article class="col-block">
 
-                        <h2 class="h01">Homo Deus” - The Book That Made Us Rethink Technology</h2>
+                        <h2 class="h01"><a href="https://en.wikipedia.org/wiki/Homo_Deus:_A_Brief_History_of_Tomorrow">Homo Deus” - The Book That Made Us Rethink Technology</a></h2>
 
                         <div>
                             <img src="images/picks/book.png" alt="" class="picksImg">
@@ -511,7 +511,7 @@
                     <!-- youtube channel-->
                     <article class="col-block">
 
-                        <h2 class="h01"><a href="https://www.youtube.com/@CodingWithLewisl">Coding with Lewis - A Fresh, Inspiring Look Into the World of Software</a></h2>
+                        <h2 class="h01"><a href="https://www.youtube.com/CodingWithLewis">Coding with Lewis - A Fresh, Inspiring Look Into the World of Software</a></h2>
 
                         <div>
                             <img src="images/picks/channels4_profile.jpg" alt="" class="picksImg">
