--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -87,7 +87,7 @@
                         View our work
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Me
+                        More About Use
                     </a>
                 </div>
 
@@ -306,7 +306,7 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                TamamApp
+                                Tamam-App
                             </h3>
                             <p class="item-folio__cat">
                                 It's an app that Aviv needs to what it does because i forgot what he said
@@ -462,7 +462,7 @@
             <div class="col-full">
                 <h3>Journal</h3>
                 <h1>Our Favorite Picks in Tech & Life</h1>
-                <p class="lead">From late-night podcasts to the books that keep us sane between assignments — here are our top picks</p>
+                <p class="lead">From late-night podcasts to the books that keep us sane between assignments - here are our top picks</p>
             </div>
         </div>
 
@@ -529,7 +529,7 @@
                     <article class="col-block">
                         
 
-                        <h2 class="h01"><a href="https://chatgpt.com/">Our Favorite AI Tool, ChatGPT - The Tool That Works With Us, Not Instead of Us</a></h2>
+                        <h2 class="h01"><a href="https://chatgpt.com/">Our Favorite AI Tool, ChatGPT - The Tool That Works With Us, Not Instead Of Us </a></h2>
                         <div>
                             <img src="images/picks/openai-chatgpt-surge-deepseek.jpg" alt="" class="picksImg">
                         </div>
