change the blog name

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -53,7 +53,7 @@
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
-                <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
+                <li><a class="smoothscroll"  href="#blog" title="blog">Recommendations</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
@@ -460,7 +460,7 @@
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
-                <h3>Journal</h3>
+                <h3>Picks</h3>
                 <h1>Our Favorite Picks in Tech & Life</h1>
                 <p class="lead">From late-night podcasts to the books that keep us sane between assignments — here are our top picks</p>
             </div>
@@ -677,7 +677,7 @@
                                 <a href="https://github.com/aviv-itzhak"><i class="fa-brands fa-github"></i> <span>Github</span></a>
                             </div>
                             <div>
-                                <a href="www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
