replaced logo with Omer&Aviv.png and fixed links to be opened in another tab

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 9 ]><html class="no-js oldie" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
 <html class="no-js" lang="en">
-<!--<![endif]-->
 
 <head>
 
@@ -35,7 +31,6 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-
 </head>
 
 <body id="top">
@@ -44,9 +39,13 @@
     ================================================== -->
     <header class="s-header">
 
+        <span>
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/GitHubFox.png" alt="Homepage"></a>
-        </div>
+                <a class="site-logo" href="https://github.com/omershachar/Ruppin-Assignments-2026A" target="_blank"><img src="images/profile images/Omer&Aviv.png" alt="Homepage"></a>
+            </div>
+        </span>
+            <div class="header-logo">
+            </div>
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
@@ -104,7 +103,7 @@
         <ul class="home-social">
            
             <li>
-                <a href="https://youtu.be/dQw4w9WgXcQ?si=HPmhiss2GzL71xw7"><i class="im im-pinterest" aria-hidden="true"></i><span>RickIt</span></a>
+                <a href="https://youtu.be/dQw4w9WgXcQ?si=HPmhiss2GzL71xw7"  target="_blank"><i class="im im-pinterest" aria-hidden="true"></i><span>RickIt</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -305,7 +304,7 @@
                             </p>
                         </div>
 
-                        <a href="https://github.com/omershachar" class="item-folio__project-link" title="Project link">
+                        <a href="https://github.com/aviv-itzhak" target="_blank" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
                         </a>
 
@@ -313,7 +312,7 @@
                             <p>
                                 A small help application that centralized multiple recurring IT issues into one place. Each button triggered an automated fix, replacing scattered guides and making troubleshooting faster, simpler, and more consistent for them
                             </p>
-                            <a href="https://github.com/omershachar">View Repository</a>
+                            <a href="https://github.com/aviv-itzhak" target="_blank">View Repository</a>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -339,7 +338,7 @@
                             </p>
                         </div>
 
-                        <a href="https://github.com/omershachar/PongWithIssues" class="item-folio__project-link" title="Project link">
+                        <a href="https://github.com/omershachar/PongWithIssues" target="_blank" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
                         </a>
 
@@ -348,7 +347,7 @@
                                 A modular Python-based Pong game: classic and physics-based modes with momentum, spin,
                                 and visual effects. Built mainly to practice OOP, game loops, and physics – and to have fun breaking it.
                             </p>
-                            <a href="https://github.com/omershachar/PongWithIssues">View Repository</a>
+                            <a href="https://github.com/omershachar/PongWithIssues" target="_blank">View Repository</a>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -374,7 +373,7 @@
                             </p>
                         </div>
 
-                        <a href="https://github.com/omershachar" class="item-folio__project-link" title="Project link">
+                        <a href="https://github.com/omershachar" target="_blank" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
                         </a>
 
@@ -383,7 +382,7 @@
                                 A C# “digital closet” assignment turned into a structured app:
                                 users, clothing items, ads, and events – all modeled with OOP, validation, and clean code.
                             </p>
-                            <a href="https://github.com/omershachar">View Repository</a>
+                            <a href="https://github.com/omershachar" target="_blank">View Repository</a>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -666,10 +665,10 @@
                         <img src="images/profile images/Aviv profile.jpg" class="profile-img" />
                         <div class="icons" >
                             <div>
-                                <a href="https://github.com/aviv-itzhak"><i class="fa-brands fa-github"></i> <span>Github</span></a>
+                                <a href="https://github.com/aviv-itzhak" target="_blank"><i class="fa-brands fa-github"></i> <span>Github</span></a>
                             </div>
                             <div>
-                                <a href="https://www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/aviv-itzhak-904554174" target="_blank"> <i class="fa-brands fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -680,10 +679,10 @@
                         <img src="images/profile images/Omer profile.jpg" class="profile-img" />
                         <div class="icons" >
                             <div>
-                                <a href="https://github.com/omershachar"><i class="fa-brands fa-github"></i> <span>Github</span></a>
+                                <a href="https://github.com/omershachar" target="_blank"><i class="fa-brands fa-github"></i> <span>Github</span></a>
                             </div>
                             <div>
-                                <a href="https://www.linkedin.com/in/omer-shachar-a4316a256/"> <i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/omer-shachar-a4316a256/" target="_blank"> <i class="fa-brands fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
