added project - Ruppin-Assignments-2026A. good enough...

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -388,6 +388,41 @@
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/RuppinAssignmentsPic.png" class="thumb-link" title="GithubPage" data-size="1300x700">
+                                <img src="images/portfolio/RuppinAssignmentsPic.png" 
+                                     srcset="images/portfolio/RuppinAssignmentsPic.png, images/portfolio/RuppinAssignmentsPic.png" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Ruppin-Assignments-2026A
+                            </h3>
+                            <p class="item-folio__cat">
+                                A repo containing all of this year code assignments - Including this one!
+                            </p>
+                        </div>
+
+                        <a href="https://github.com/omershachar/Ruppin-Assignments-2026A" target="_blank" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <div class="item-folio__caption">
+                            <p>
+                                A repo for Ruppin assignments in 2026A
+                                    JavaStaff, WebDev and DatabasesStaff.
+                            </p>
+                            <a href="https://github.com/omershachar/Ruppin-Assignments-2026A" target="_blank">View Repository</a>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
             </div>
         </div> <!-- end masonry -->
 
