fixed everything -> should hopefully work

--- a/WebDev/4A-WebDev/index.html
+++ b/WebDev/4A-WebDev/index.html
@@ -32,8 +32,8 @@
             </div>
             
             <div class="controls">
-                <button class="action-btn btn-check" onclick="checkGame()">בדיקת הגרלה</button>
-                <button class="action-btn btn-finish" onclick="endGame()">סיים</button>
+                <button class="action-btn btn-check" onclick="lottoCheck()">בדיקת הגרלה</button>
+                <button class="action-btn btn-finish" onclick="endLottoGame()">סיים הגרלות</button>
             </div>
         </section>
 
