added that black hostages box to index

--- a/WebDev/5A-WebDev/index.html
+++ b/WebDev/5A-WebDev/index.html
@@ -6,6 +6,7 @@
     <title>Coffee Shop - Register</title>
 </head>
 <body>
+    <div id="bthn" lang="he"></div>
     <div class="container">
         <h1>Register - temp</h1>
         <button onclick="window.location.href='pages/dashboard.html'">Enter as a guest</button>
@@ -15,5 +16,6 @@
             <input type="submit" value="Register">
         </form>
     </div>
+    <script src="hostages-ticker.js"></script>
 </body>
 </html>
