fix hostages box & modified README.md

--- a/WebDev/5A-WebDev/index.html
+++ b/WebDev/5A-WebDev/index.html
@@ -16,6 +16,6 @@
             <input type="submit" value="Register">
         </form>
     </div>
-    <script src="hostages-ticker.js"></script>
+    <script src="scripts/hostages-ticker.js"></script>
 </body>
 </html>
