menu page added

--- a/WebDev/5A-WebDev/pages/categories.html
+++ b/WebDev/5A-WebDev/pages/categories.html
@@ -4,14 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/categories.css">
     <title>Coffee Shop - Categories</title>
 </head>
 <body>
-    <div class="container">
-        <header class="page-header">
-            <button class="back-btn" onclick="navigateToDashboard()">Back</button>
-            <h1>This is categories page</h1>
+<div >
+        <header >
+            <div class="back-arrow" onclick="navigateToDashboard()">🔙</div>
+            <span class="title"> MENU </span>
         </header>
+
+        <div class="grid-container">
+            <div>
+                 <h3>Drinks ☕</h3>
+            </div>
+
+            <div>
+                <h3>Pastries 🥐</h3>
+            </div>
+
+            <div>
+                <h3> Salads 🥗</h3>
+            </div>
+
+            <div>
+                <h3>Sandwiches 🥪</h3>
+            </div>
+
+            <div>
+                <h3>Toasts 🧀 </h3>
+            </div>
+
+            <div>
+                <h3>Breakfasts 🍳</h3>
+            </div>
+        </div>
+
     </div>
     <script src="../scripts/global.js"></script>
 </body>
