--- a/WebDev/5A-WebDev/pages/items.html
+++ b/WebDev/5A-WebDev/pages/items.html
@@ -3,9 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/items.css">
     <title>Items</title>
+
 </head>
 <body>
-    <h1>This is Items page</h1>
+
+    <div class="container"></div>
+
+
+<script>
+
+    let params = new URLSearchParams(window.location.search);
+    let category = params.get("category"); //get the category name from the URL
+    let menuItem= localStorage.getItem("menuFile")
+    menuItem=JSON.parse(menuItem);
+
+    let container = document.querySelector(".container");
+    let pageTitle = document.createElement("h1")
+    document.body.prepend(pageTitle)//add to the top of the body
+    pageTitle.textContent=category
+    pageTitle.setAttribute("class","pageTitle")
+
+    //loop that create the items cards from the localStorage file dynamically
+    for(let i=0; i<menuItem[category].length; i++){
+        let div = document.createElement("div");
+        let cardTitle = document.createElement("h1");
+        let priceTxt = document.createElement("span");
+        let btn = document.createElement("button");
+
+        cardTitle.textContent=menuItem[category][i].name
+        priceTxt.textContent="$" + menuItem[category][i].price
+        btn.textContent="Buy"
+
+        //add the name and the price of the item to the data section on the btn
+        btn.dataset.name=menuItem[category][i].name
+        btn.dataset.price=menuItem[category][i].price
+
+        container.appendChild(div);
+        div.appendChild(cardTitle);
+        div.appendChild(priceTxt);
+        div.appendChild(btn);
+
+        div.className="itemCard";
+        cardTitle.className="cardTitle";
+        priceTxt.className="cardPrice";
+        btn.className="cardBtn";
+
+    }
+
+    //add the function showAlert to every btn
+    btnList= document.querySelectorAll("button")
+    for (let i = 0; i < btnList.length; i++) {
+        btnList[i].addEventListener("click", function () {
+            showAlert()
+            addItemToOrdersFileKey(this)
+        });
+    }
+
+        //showing message on the screen after purchase
+        function showAlert() {
+            let alertBox = document.createElement("div");
+            alertBox.textContent = "Enjoy your order! Purchase successful";
+            alertBox.className = "miniAlert";
+
+            document.body.appendChild(alertBox);
+
+            setTimeout(function () {alertBox.remove()},2000);
+        }
+
+        function addItemToOrdersFileKey(clicked) {
+            let name = clicked.dataset.name
+            let price = clicked.dataset.price
+            let date = new Date().toLocaleDateString("he-IL");
+            let ordersArr=[]
+
+            if (localStorage.getItem("ordersFile") !== null) {
+                ordersArr = JSON.parse(localStorage.getItem("ordersFile"));
+                ordersArr.push({"name": name, "price": price, "date": date});
+                localStorage.setItem("ordersFile", JSON.stringify(ordersArr));
+
+            }
+            else{
+                ordersArr.push({"name": name, "price": price, "date": date});
+                localStorage.setItem("ordersFile", JSON.stringify(ordersArr));
+            }
+
+        }
+
+
+
+</script>
 </body>
 </html>
