--- a/WebDev/5A-WebDev/pages/recharge.html
+++ b/WebDev/5A-WebDev/pages/recharge.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/recharge.css">
     <title>Coffee Shop - Recharge</title>
 </head>
 <body>
@@ -12,7 +13,23 @@
             <button class="back-btn" onclick="navigateToDashboard()">Back</button>
             <h1>This is recharge page</h1>
         </header>
+        <div class="recharge-card">
+            <div class="balance-display">
+                <h2>current-balance</h2>
+                <div class="balance-amount" id="current-balance">0 ₪</div>
+            </div>
+
+            <div class="recharge-form">
+                <h2>Loading card</h2>
+                <div class="form-group">
+                    <label for="recharge-amount">recharge-amount($)</label>
+                    <input type="number" id="recharge-amount" min="1" step="0.01" placeholder="Enter amount">
+                </div>
+                <button class="btn-primary" onclick="rechargeCard()">Load card</button>
+                <div id="recharge-message" class="message"></div>
+            </div>
     </div>
     <script src="../scripts/global.js"></script>
+    <script src="../scripts/recharge.js"></script>
 </body>
 </html>
