--- a/WebDev/5A-WebDev/pages/dashboard.html
+++ b/WebDev/5A-WebDev/pages/dashboard.html
@@ -77,8 +77,7 @@
     <script src="../scripts/global.js"></script>
 <script>
 
-    let orderArr=JSON.parse(localStorage.getItem("ordersFile"))
-    let count = 0;
+
     let boxDivs=document.querySelectorAll("#box .slide")
 
     let h2LastOrder = document.createElement("h2");
@@ -95,6 +94,13 @@
     boxDivs[2].appendChild(h2Grade);
     boxDivs[2].classList.add("h2General");
 
+
+    let orderArr=[]
+    if(localStorage.getItem("ordersFile")!==null){
+        orderArr=JSON.parse(localStorage.getItem("ordersFile"))
+    }
+
+
     //run first time to fill the text
     findLastOrder(h2LastOrder,pLastOrder)
     DisplayMonthOrders(h2DisplayMorder)
@@ -102,7 +108,7 @@
 
     setInterval(nextSlide,4000)
 
-
+    let count = 0;
     function nextSlide() {
         switch (count) {
             case 0:
@@ -131,11 +137,15 @@
 
 
     function findLastOrder(h2LastOrder,pLastOrder) {
-
+        if (localStorage.getItem("ordersFile") !== null) {
             let last = orderArr[orderArr.length - 1];
-        h2LastOrder.textContent = "Your Last Order";
-        pLastOrder.innerHTML = "Date: " + getLastOrderDate(last) + "<br>" + "Name: " + last.name + "<br>"
+            h2LastOrder.textContent = "Your Last Order";
+            pLastOrder.innerHTML = "Date: " + getLastOrderDate(last) + "<br>" + "Name: " + last.name + "<br>"
                 + "Price: " + "$" + last.price;
+        } else {
+            h2LastOrder.textContent = "No Last Order To Display";
+        }
+
 
     }
 
